--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
     @import url("webfonts/KunstlerScript/stylesheet.css");
 @import url("webfonts/KUNSTLER/stylesheet.css");
+@import url("webfonts/KunstlerScriptW/stylesheet.css");
 
         * {
             margin: 0;
@@ -80,7 +81,7 @@
         
         /* 花体Logo样式 */
         .logo {
-	font-family: 'KUNSTLER';
+	font-family:'KunstlerScriptW';
 	font-size: 12rem;
 	font-weight: 400;
 	color: rgba(255, 255, 255, 0.9);
