--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Nijae | 产品序列认证</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-		@import url("../Nijae - 副本/webfonts/KUNSTLER/stylesheet.css");
+		@import url("webfonts/KUNSTLER/stylesheet.css");
         /* 基础重置 */
         * {
             margin: 0;
@@ -18,7 +18,7 @@
         /* 字体定义 - Kunstler Script */
 		@font-face {
 			font-family: 'Kunstler Script';
-			src: url('../Nijae - 副本/webfonts/KUNSTLER/KUNSTLER.ttf') format('ttf');
+			src: url('webfonts/KUNSTLER/KUNSTLER.ttf') format('ttf');
 			font-weight: normal;
 			font-style: normal;
 			font-display: swap;
