--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         /* 字体定义 - Kunstler Script */
 		@font-face {
 			font-family: 'Kunstler Script';
-			src: url('webfonts/KUNSTLER/KUNSTLER.ttf') format('turetype');
+			src: url('https://github.com/NijaeGamingStudio/Nijae/blob/fb5869942b153a12b39d14d8406dabfc894bc2b9/webfonts/KUNSTLER/KUNSTLER.ttf') format('turetype');
 			font-weight: normal;
 			font-style: normal;
 			font-display: swap;
