--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
             <div class="logo-main">Nijae</div>
             <div class="logo-subtitle-container">
                 <div class="logo-decoration decoration-bottom"></div>
-                <div class="logo-subtitle">i垫系列</div>
+                <div class="logo-subtitle">爱垫系列</div>
             </div>
         </div>
     </div>
@@ -782,7 +782,7 @@
         
         <!-- 系列产品展示 -->
         <section class="products-section">
-            <h2 class="section-title">i垫系列</h2>
+            <h2 class="section-title">爱垫系列</h2>
             <div class="products-grid">
                 <div class="product-card" data-product="mono">
                     <div class="product-img">
@@ -840,7 +840,7 @@
         <div class="footer-content">
             <div class="footer-logo">Nijae</div>
             <p class="footer-tagline">
-                融合动漫美学的精致外设品牌<br>
+                一个注重原创设计，追求完美手感的外设品牌<br>
                 首发产品NFC卡限量50张，赋予您独特身份与价值
             </p>
             <div class="copyright">
